Sync up with changes to application-stacks repo (#5)
Switch to multi-arch adoptopenjdk base image

--- a/java-websphere-traditional/image/project/Dockerfile
+++ b/java-websphere-traditional/image/project/Dockerfile
@@ -1,11 +1,47 @@
-# Step 1: Build the user's application
 FROM {{.stack.baseimage}} as compile
 
-RUN mkdir -p /mvn/repository
+USER root
+
+RUN dnf --disableplugin=subscription-manager install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm \
+  && dnf --disableplugin=subscription-manager install -y unzip curl ca-certificates wget xmlstarlet \
+  && dnf --disableplugin=subscription-manager update -y; dnf --disableplugin=subscription-manager clean all
+
+RUN useradd --uid 1000 --gid 0 --shell /bin/bash --create-home java_user \
+  && mkdir -p /mvn/repository \
+  && mkdir -p /work/home \
+  && mkdir -p /project \
+  && mkdir -p /usr/share/maven \
+  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn \
+  && chown -R java_user:0 /mvn /work/home /project /opt/java/openjdk /usr/share/maven
+
+USER java_user
+
+#
+# Install maven
+#
+# This section based upon:
+#   https://github.com/kabanero-io/collections/blob/master/docker/Dockerfile-maven
+#
+
+ARG MAVEN_VERSION=3.6.3
+ARG USER_HOME_DIR="/root"
+ARG SHA=c35a1803a6e70a126e80b2b3ae33eed961f83ed74d18fcd16909b2d44d7dada3203f1ffe726c17ef8dcca2dcaa9fca676987befeadc9b9f759967a8cb77181c0
+ARG BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/
+
+RUN mkdir -p /usr/share/maven/ref \
+  && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
+  && echo "${SHA}  /tmp/apache-maven.tar.gz" | sha512sum -c - \
+  && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
+  && rm -f /tmp/apache-maven.tar.gz
+
+ENV MAVEN_HOME /usr/share/maven
+ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
+
+# Step 1: Build the user's application
 
 #setup project folder for java build step
-COPY . /project
-COPY ./mvn-stack-settings.xml /usr/share/maven/conf/settings.xml
+COPY --chown=java_user:0 . /project
+COPY --chown=java_user:0 ./mvn-stack-settings.xml /usr/share/maven/conf/settings.xml
 
 WORKDIR /project/user-app
 
