--- a/java-websphere-traditional/image/Dockerfile-stack
+++ b/java-websphere-traditional/image/Dockerfile-stack
@@ -11,6 +11,7 @@ RUN useradd --uid 1000 --gid 0 --shell /bin/bash --create-home java_user \
   && mkdir -p /work/home \
   && mkdir -p /opt/java/openjdk \
   && mkdir -p /usr/share/maven \
+  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn \
   && chown -R java_user:0 /mvn /work/home /opt/java/openjdk /usr/share/maven
 
 COPY ./LICENSE /licenses/
@@ -72,19 +73,13 @@ ENV JAVA_TOOL_OPTIONS="-XX:+IgnoreUnrecognizedVMOptions -XX:+UseContainerSupport
 ARG MAVEN_VERSION=3.6.3
 ARG USER_HOME_DIR="/root"
 ARG SHA=c35a1803a6e70a126e80b2b3ae33eed961f83ed74d18fcd16909b2d44d7dada3203f1ffe726c17ef8dcca2dcaa9fca676987befeadc9b9f759967a8cb77181c0
-ARG BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
+ARG BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/
 
 RUN mkdir -p /usr/share/maven/ref \
   && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
   && echo "${SHA}  /tmp/apache-maven.tar.gz" | sha512sum -c - \
   && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
   && rm -f /tmp/apache-maven.tar.gz
-
-USER root
-
-RUN ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-
-USER java_user
 
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
@@ -104,7 +99,7 @@ ENV APPSODY_USER_RUN_AS_LOCAL=true
 ENV APPSODY_PROJECT_DIR="/project"
 
 ENV APPSODY_MOUNTS=".:/project/user-app;~/.m2/repository:/mvn/repository"
-ENV APPSODY_DEPS=
+ENV APPSODY_DEPS=/project/deps
 
 ENV APPSODY_PREP="/project/java-twas-build.sh prep"
 
