ready to try public travis build

--- a/java-websphere-traditional/image/project/Dockerfile
+++ b/java-websphere-traditional/image/project/Dockerfile
@@ -2,7 +2,7 @@ FROM {{.stack.baseimage}} as compile
 
 USER root
 
-RUN dnf --disableplugin=subscription-manager install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm \
+RUN dnf --disableplugin=subscription-manager install -y {{.stack.epelrpm}} \
   && dnf --disableplugin=subscription-manager install -y unzip curl ca-certificates wget xmlstarlet \
   && dnf --disableplugin=subscription-manager update -y; dnf --disableplugin=subscription-manager clean all
 
@@ -23,10 +23,10 @@ USER java_user
 #   https://github.com/kabanero-io/collections/blob/master/docker/Dockerfile-maven
 #
 
-ARG MAVEN_VERSION=3.6.3
+ARG MAVEN_VERSION={{.stack.mavenversion}}
 ARG USER_HOME_DIR="/root"
-ARG SHA=c35a1803a6e70a126e80b2b3ae33eed961f83ed74d18fcd16909b2d44d7dada3203f1ffe726c17ef8dcca2dcaa9fca676987befeadc9b9f759967a8cb77181c0
-ARG BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/
+ARG SHA={{.stack.mavensha}}
+ARG BASE_URL={{.stack.mavendownload}}/${MAVEN_VERSION}/binaries/
 
 RUN mkdir -p /usr/share/maven/ref \
   && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
