--- a/java-websphere-traditional/image/Dockerfile-stack
+++ b/java-websphere-traditional/image/Dockerfile-stack
@@ -2,7 +2,7 @@ FROM {{.stack.finalimage}}
 
 USER root
 
-RUN dnf --disableplugin=subscription-manager install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm \
+RUN dnf --disableplugin=subscription-manager install -y {{.stack.epelrpm}} \
   && dnf --disableplugin=subscription-manager install -y xmlstarlet \
   && dnf --disableplugin=subscription-manager update -y; dnf --disableplugin=subscription-manager clean all
 
@@ -31,21 +31,21 @@ USER java_user
 # Note: removed leading "set -eux; \" argument to RUN, restore if debugging this command
 #
 
-ENV JAVA_VERSION jdk8u242-b08_openj9-0.18.1
+ENV JAVA_VERSION {{.stack.jdkversion}}
 
 RUN ARCH="$(uname -m)"; \
     case "${ARCH}" in \
        ppc64el|ppc64le) \
-         ESUM='d958da86425c23c49a23dbe2616de55e6b44a2139c548880440505401ff48ec4'; \
-         BINARY_URL='https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u242-b08_openj9-0.18.1/OpenJDK8U-jdk_ppc64le_linux_openj9_8u242b08_openj9-0.18.1.tar.gz'; \
+         ESUM='{{.stack.jdkshappc64le}}'; \
+         BINARY_URL='{{.stack.jdkdownload}}/{{.stack.jdkversion}}/OpenJDK8U-jdk_ppc64le_linux_openj9_{{.stack.jdksuffix}}.tar.gz'; \
          ;; \
        s390x) \
-         ESUM='82f34d0917c068e49cd23a7350ccc592648b31bad45ea89536577493a043eab6'; \
-         BINARY_URL='https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u242-b08_openj9-0.18.1/OpenJDK8U-jdk_s390x_linux_openj9_8u242b08_openj9-0.18.1.tar.gz'; \
+         ESUM='{{.stack.jdkshas390x}}'; \
+         BINARY_URL='{{.stack.jdkdownload}}/{{.stack.jdkversion}}/OpenJDK8U-jdk_s390x_linux_openj9_{{.stack.jdksuffix}}.tar.gz'; \
          ;; \
        amd64|x86_64) \
-         ESUM='ca785af638b24f9d4df896f5a9f557cc9f1e5fa5e2b1174d6b906e3fd5474c2e'; \
-         BINARY_URL='https://github.com/AdoptOpenJDK/openjdk8-binaries/releases/download/jdk8u242-b08_openj9-0.18.1/OpenJDK8U-jdk_x64_linux_openj9_8u242b08_openj9-0.18.1.tar.gz'; \
+         ESUM='{{.stack.jdkshax64}}'; \
+         BINARY_URL='{{.stack.jdkdownload}}/{{.stack.jdkversion}}/OpenJDK8U-jdk_x64_linux_openj9_{{.stack.jdksuffix}}.tar.gz'; \
          ;; \
        *) \
          echo "Unsupported arch: ${ARCH}"; \
@@ -70,10 +70,10 @@ ENV JAVA_TOOL_OPTIONS="-XX:+IgnoreUnrecognizedVMOptions -XX:+UseContainerSupport
 #   https://github.com/kabanero-io/collections/blob/master/docker/Dockerfile-maven
 #
 
-ARG MAVEN_VERSION=3.6.3
+ARG MAVEN_VERSION={{.stack.mavenversion}}
 ARG USER_HOME_DIR="/root"
-ARG SHA=c35a1803a6e70a126e80b2b3ae33eed961f83ed74d18fcd16909b2d44d7dada3203f1ffe726c17ef8dcca2dcaa9fca676987befeadc9b9f759967a8cb77181c0
-ARG BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/
+ARG SHA={{.stack.mavensha}}
+ARG BASE_URL={{.stack.mavendownload}}/${MAVEN_VERSION}/binaries/
 
 RUN mkdir -p /usr/share/maven/ref \
   && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
