--- a/java-websphere-traditional/image/Dockerfile-stack
+++ b/java-websphere-traditional/image/Dockerfile-stack
@@ -114,6 +114,7 @@ ENV APPSODY_RUN_KILL=false
 ENV APPSODY_DEBUG="/project/java-twas-build.sh debug"
 # ENV APPSODY_DEBUG_ON_CHANGE="/project/java-twas-build.sh recompile"
 # ENV APPSODY_DEBUG_KILL=false
+ENV APPSODY_DEBUG_PORT=0
 
 ENV APPSODY_TEST="/project/java-twas-build.sh test"
 # ENV APPSODY_TEST_ON_CHANGE=""
