--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ before_deploy:
 
 deploy:
   provider: releases
+  skip_cleanup: true
+  cleanup: false
   token: $GITHUB_TOKEN
   file: ci/release/*
   file_glob: true
